Finished implementing the new game scheme! Implemented ConsoleGame